# nav2-virtual-layer

./: LICENSE  readme.md
nav2_virtual_layer/: CMakeLists.txt  package.xml  plugin.xml
nav2_virtual_layer/include/nav2_virtual_layer/: virtual_layer.hpp
nav2_virtual_layer/src/: virtual_layer.cpp
nav2_virtual_layer/srv/: AddCircle.srv  AddLine.srv  AddPolygon.srv  RemoveShape.srv
